# r4c-test

./: README.md  pyproject.toml  tasks.md
src/: manage.py
src/R4C/: asgi.py  settings.py  urls.py  wsgi.py
src/apps/orders/: models.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py
src/apps/robots/: forms.py  urls.py  views.py
